assets/css/color.scss
//=============================================================================
// IMPORTS
//=============================================================================

@import "../bower/HTML5-Reset/assets/css/reset";

@import "../bower/bootstrap-sass/assets/stylesheets/bootstrap/_variables.scss";
@import "../bower/bootstrap-sass/assets/stylesheets/bootstrap/mixins/_grid-framework.scss";
@import "../bower/bootstrap-sass/assets/stylesheets/bootstrap/mixins/_grid.scss";
@import "../bower/bootstrap-sass/assets/stylesheets/bootstrap/mixins/_clearfix.scss";
@import "../bower/bootstrap-sass/assets/stylesheets/bootstrap/_grid.scss";

//=============================================================================
// VARIABLES
//=============================================================================

$black: black;
$gray: #adadad;
$light-gray: #e6e6e6;
$lightest-gray: #f9f9f9;
$palette-height: 210px;
$hover: #f2f2f2;
$button-height: 40px;

//=============================================================================
// STYLES
//=============================================================================

a, a:visited {
    text-decoration: none;
    color: $black;
}

html, body {
    height: 100%;
}

html {
    //overflow-y: scroll;
}

body {
    display: flex;
    flex-direction: column;
}

body, input {
    font-family: 'Source Sans Pro', sans-serif;
    font-weight: 400; // regular
    font-size: 14px;
    color: $black;
}

header {
    height: 61px;
    background: $lightest-gray;
    border-bottom: 1px solid $light-gray;
    user-select: none;
    cursor: default;
    
    h1 {
        height: 20px;
        line-height: 20px;
        padding-left: 35px;
        background: url(../img/e.svg) left center no-repeat;
        margin-top: 20px;
    }
    
    .palette-tabs {
        display: flex;
        align-items: flex-end;
        height: 61px;
        overflow: hidden;
        //background: #f9f9f9;
        
        li {
            
            // styles everything
            a {
                position: relative;
                display: block;
                height: $button-height;
                line-height: 38px;
                padding: 0 20px;
                border: 1px solid $light-gray;
                margin-right: 10px;
                cursor: pointer;
                color: #999;
                
                &.has-swatches:after {
                    content: '';
                    position: absolute;
                    top: 5px;
                    right: 5px;
                    display: block;
                    width: 5px;
                    height: 5px;
                    background: #a2e06e;
                    border-radius: 3px;
                }
            
                html.no-touch &:hover {
                    background: $hover;
                }
            }
            
            &.active {
                
                a {
                    background: #fff;
                    border-bottom-color: #fff;
                    cursor: default;
                    color: $black;
                    
                    html.no-touch &:hover {
                        background: #fff;
                    }
                }
            }
        }
    }
}

.palette-container {
    position: relative;
    background: url(../img/stripe_07124988ed2a06d6779512c020f61af9.png);
    border-bottom: 1px solid $light-gray;
    
    .gradient-overlay {
        position: absolute;
        top: 0;
        right: 0;
        bottom: 0;
        left: 0;
        background: -moz-linear-gradient(top,  rgba(255,255,255,1) 0%, rgba(255,255,255,0) 100%);
        background: -webkit-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%);
        background: linear-gradient(to bottom,  rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%);
        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#00ffffff',GradientType=0 );
    }
    
    .palette-control {
        
        display: flex;
        flex-direction: column;
        justify-content: center;
        height: 200px;
        
        button {
            display: block;
            width: 80px;
            height: 30px;
            background: #fff;
            border: 1px solid #e6e6e6;
            border-radius: 3px;
            margin: 10px 0 0 0;
            
            &:first-child {
                margin-top: 0;
            }
            
            html.no-touch &:hover {
                background: $hover;
            }
            
            &:active {
                background: darken($hover, 10%);
            }
            
            &:focus {
                outline: none;
            }
            
            &.disabled {
                color: #ccc;
                pointer-events: none;
            }
        }
        
        button::-moz-focus-inner {
            border: 0;
            padding: 0;
        }
    }

    .palettes {
    
        & > div {
            display: none;
            align-content: flex-start;
            height: 200px;
            
            &.active {
                display: flex;
            }
        }
        
        p {
            display: block;
            position: absolute;
            width: 300px;
            height: 40px;
            background: #fff;
            border: 1px solid #e6e6e6;
            top: 80px;
            left: 50%;
            margin-left: -150px;
            text-align: center;
            line-height: 37px;
        }
    }
    
    textarea.css {
        position: absolute;
        z-index: -1;
        border: 0;
        outline: 0;
        padding: 0;
        -webkit-appearance: none;
        resize: none;
    }
}

.swatch {
    position: relative;
    width: 120px;
    height: 120px;
    margin: 0 30px 30px 0;
    
    &:after {
        content: '';
        position: absolute;
        display: inline-block;
        left: 50%;
        top: 50%;
        font-size: 40px;
        width: 20px;
        height: 20px;
        line-height: 20px;
        margin-left: -10px;
        margin-top: -11px;
        color: rgba(255, 255, 255, 0.5);
    }
    
    // hover in unselected state
    html.no-touch &:hover {
        cursor: pointer;
    }
    
    html.no-touch .tab-pane &:not(.added):hover:after {
        content: '+';
    }
    
    .palettes > div & {
        align-self: center;
        margin-bottom: 0;
    }
    
    html.no-touch .palettes &:hover:after {
        content: '×';
        margin-left: -10px;
        margin-top: -10px;
    }
    
    &.added:after {
        content: '✓';
    }
    
    &.add {
        border: 1px solid $light-gray;
        
        &:after {
            content: '+';
            color: $light-gray;
        }
    }
    
    &.spacer {
        cursor: default;
        pointer-events: none;
    }
    
    // palette indicators
    span {
        display: block;
        width: 14px;
        height: 14px;
        background: rgba(255,255,255,0.3);
        border-radius: 7px;
        margin: 5px;
        text-align: center;
        line-height: 13px;
        font-size: 10px;
        font-weight: 600;
    }
}

.color-sets-container {
    flex: 1;
    position: relative;
    
    .container {
        position: absolute;
        top: 0;
        right: 0;
        bottom: 0;
        left: 0;
        overflow-y: scroll;
        -webkit-overflow-scrolling: touch;
        
        &::-webkit-scrollbar { width: 0 !important }
        
        .col-sm-2 {
            position: fixed;
            padding-top: 40px;
        }
    }
    
    h2 {
        font-size: 13px;
        font-weight: 600;
        letter-spacing: 1px;
        margin-bottom: 30px;
    }
    
    ul.color-sets {
        li {
            text-transform: capitalize;
            
            &.active {
                
                font-weight: 600;
                
                a {
                    color: $black;
                    cursor: default;
                }
            }
            
            a {
                display: block;
                height: $button-height;
                color: $gray;
                cursor: pointer;
                
                html.no-touch &:hover {
                    color: $black;
                }
            }
        }
    }

    .colors {
        position: relative;
        
        // tab content
        .tab-content {
            padding-top: 40px;
    
            .tab-pane {
                display: none;
                flex-wrap: wrap;
                
                &.active {
                    display: flex;
                }
            }
        }
    }
}

.clipboard-notification {
    display: none;
    position: absolute;
    top: 20px;
    right: 20px;
    z-index: 1;
    width: 250px;
    padding: 20px;
    background: lighten(#ffd900, 30%);
    border-radius: 5px;
    text-align: center;
}

